# VulkanRenderVB

./: .gitignore  AutoExposure.md  Bloom.md  CMakeLists.txt  ColorGrading.md  ComputeShaderExecutionModel.md  DebugUI.md  DescriptorManagerDesign.md  GPUPathTracing.md  GPUProfiler.md  GTAO.md  ObjectLabeling.md  OcclusionCulling.md  PipelineStatistics.md  PostProcessingPipeline.md  README.md  RT_Shadows_RT_Reflections_Design_and_Implementation.md  ToneMapping.md  WhatisPipelineCache.md  WhyMImageFencesNeeded.md  WhySecondaryCommandBuffer.md  requirement.md  setup_ubuntu.sh
scripts/: ray_flow.dot  ray_flow_graph.py  ray_flow_graph_clean.py
shaders/: bloom_downsample.comp  bloom_upsample.comp  brdf_lut.comp  color_grading.frag  cull.comp  cull_occlusion.comp  debug_vis.frag  equirect_to_cube.comp  exposure_average.comp  exposure_histogram.comp  fullscreen.vert  gtao.comp  gtao_blur.comp  hiz_reduce.comp  irradiance.comp  mesh.frag  mesh.vert  nrd_prepack.comp  pbr.frag  pbr.vert  pbr_indirect.frag  pbr_indirect.vert  prefilter.comp  pt_anyhit.rahit  pt_closesthit.rchit  pt_common.glsl  pt_composite.comp  pt_composite_compare.comp  pt_composite_denoise.comp  pt_miss.rmiss  pt_raygen.rgen  pt_shadow_miss.rmiss  rt_composite.comp  rt_reflect_denoise.comp  rt_reflections.comp  rt_shadow_denoise.comp  rt_shadows.comp  shadow.frag  shadow.vert  shadow_indirect.vert  (+1 more)
src/: main.cpp
src/Asset/: ModelLoader.cpp  ModelLoader.h
src/Core/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  Logger.h  SubmitThread.cpp  SubmitThread.h  ThreadPool.cpp  ThreadPool.h  Window.cpp  Window.h
src/GPU/: ComputeCulling.cpp  ComputeCulling.h  HiZBuffer.cpp  HiZBuffer.h  IndirectRenderer.cpp  IndirectRenderer.h  MeshPool.cpp  MeshPool.h
src/IBL/: IBLProcessor.cpp  IBLProcessor.h
src/ImageCache/: ImageCache.cpp  ImageCache.h
src/Lighting/: CascadedShadowMap.cpp  CascadedShadowMap.h
src/Math/: AABB.h
src/PostProcess/: AutoExposure.cpp  AutoExposure.h  Bloom.cpp  Bloom.h  ColorGrading.cpp  ColorGrading.h  PostProcessStack.cpp  PostProcessStack.h  SSAO.cpp  SSAO.h  ToneMapping.cpp  ToneMapping.h
src/RHI/: VmaImpl.cpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMemory.cpp  VulkanMemory.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h  VulkanUtils.h
src/RayTracing/: AccelStructure.cpp  AccelStructure.h  NRDDenoiser.cpp  NRDDenoiser.h  PathTracer.cpp  PathTracer.h  RTPipeline.cpp  RTPipeline.h  RTReflections.cpp  RTReflections.h  RTShadows.cpp  RTShadows.h  ShaderBindingTable.cpp  ShaderBindingTable.h
src/RenderGraph/: BarrierBatcher.cpp  BarrierBatcher.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  ResourceNode.h
src/RenderGraph/Passes/: ForwardPass.cpp  ForwardPass.h  FrustumCullPass.cpp  FrustumCullPass.h  HiZBuildPass.cpp  HiZBuildPass.h  HybridRTPass.cpp  HybridRTPass.h  OccluderDepthPass.cpp  OccluderDepthPass.h  OcclusionTestPass.cpp  OcclusionTestPass.h  PathTracingPass.cpp  PathTracingPass.h  PostProcessPass.cpp  PostProcessPass.h  PresentPass.cpp  PresentPass.h  RayTracingPass.cpp  RayTracingPass.h  ShadowPass.cpp  ShadowPass.h
src/Resource/: DescriptorManager.cpp  DescriptorManager.h  PipelineManager.cpp  PipelineManager.h  ShaderManager.cpp  ShaderManager.h  TransferManager.cpp  TransferManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanImage.cpp  VulkanImage.h
src/Scene/: Camera.cpp  Camera.h  ECS.h  Scene.h
src/VisualUI/: DebugUI.cpp  DebugUI.h  DebugVisualization.cpp  DebugVisualization.h  GPUProfiler.cpp  GPUProfiler.h  ImGuiPass.cpp  ImGuiPass.h  ObjectLabeling.cpp  ObjectLabeling.h  PipelineStatistics.cpp  PipelineStatistics.h
